[avmfritz] Avoid a hidden NPE when getIdentifier() of an uninitialized ThingHandler is called (#9040)
* Avoid a hidden NPE when getIdentifier() of an uninitialized ThingHandler is called
* Fixed Powerline546EHandler